# Burgers

./: BurgersRHS1D.cpp  CMakeLists.txt  GeometricFactors1D.cpp  MeshGen1D.cpp  README.md  burgers.h  main.cpp
Polynomial/: CMakeLists.txt  GradJacobiP.cpp  GradVandermonde1D.cpp  Jacobi1D.cpp  Jacobi1D.h  JacobiGL.cpp  JacobiGQ.cpp  JacobiP.cpp  Vandermonde1D.cpp
